env/dev/weatherapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-deployment
  labels:
    app: weather-api
spec:
  replicas: 0
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: weather-api
        image: ghcr.io/jbknowit/weather-api:latest
        ports:
        - containerPort: 8080
