env/dev/weatherapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-service
  namespace: default
  labels:
    app.kubernetes.io/name: weather-api
    project: weather-api-project
spec:
  selector:
    app.kubernetes.io/name: weather-api
    project: weather-api-project
  ports:
    -
      port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  type: ClusterIP
