env/dev/weatherapi/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: weather-api-gateway
  namespace: weatherapi
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: api.127.0.0.1.sslip.io
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weather-api
  namespace: weatherapi
spec:
  parentRefs:
    - name: weather-api-gateway
  hostnames:
    - api.127.0.0.1.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: weather-api-service
          port: 80
