env/dev/weatherapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-api
  namespace: weatherapi
spec:
  ingressClassName: nginx
  rules:
    - host: api.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-api-service
                port:
                  number: 80
